analysis/symbol-light-classes/testData/lightClassByFqName/compilationErrors/ExpectDeclarations.java
public final class ClassToCheck /* common.pack.ClassToCheck*/ {
  @org.jetbrains.annotations.Nullable()
  private final @org.jetbrains.annotations.Nullable() common.pack.EXPECT myExpect = null /* initializer type: null */;

  @org.jetbrains.annotations.Nullable()
  public final @org.jetbrains.annotations.Nullable() common.pack.EXPECT getMyExpect();//  getMyExpect()

  public  ClassToCheck();//  .ctor()

  public final void someFunWithLambda(@org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() kotlin.jvm.functions.Function1<? super @org.jetbrains.annotations.NotNull() java.lang.String, @org.jetbrains.annotations.NotNull() java.lang.Integer>);//  someFunWithLambda(@org.jetbrains.annotations.NotNull() kotlin.jvm.functions.Function1<? super @org.jetbrains.annotations.NotNull() java.lang.String, @org.jetbrains.annotations.NotNull() java.lang.Integer>)

  public final void someFunWithString(@org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() java.lang.String);//  someFunWithString(@org.jetbrains.annotations.NotNull() java.lang.String)

  public static final class MyException /* common.pack.ClassToCheck.MyException*/ extends java.lang.Throwable {
    public  MyException();//  .ctor()
  }
}
